Can't seem to authorize gcal services in multiple threads. Changing daemon to run only 1 room updates. Added script to start all daemons. Adding local methods to overwrite broken GCal4Ruby ones.

--- a/source/rb/roominator/app/views/room/_rooms.haml
+++ b/source/rb/roominator/app/views/room/_rooms.haml
@@ -1,4 +1,5 @@
-
+%h2
+  NOTE: You will need to start a new daemon if you add a new room to the list below
 = form_tag({:action => :setup_rooms, :controller => :room}, {:id => "rooms_form"}) do
   %table#rooms_table
     %tr{:align=>"left"}
